--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ jboss/server/minimal/work/**/*
 # deployed package files #
 
 *.DEPLOYED
+
+Practice program to create branch and ignore repository.
